# fastapi-vue3-template

./: .env.example  .gitignore  README.md  compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  run-dev-single-port.ps1
backend/app/: backend_pre_start.py  initial_data.py  main.py
backend/app/alembic/: env.py  script.py.mako
backend/app/alembic/versions/: .gitkeep  20260506_01_align_permission_page_url_with_frontend.py  20260506_02_add_is_deleted_soft_delete_index.py  20260506_03_add_audit_log_module.py  20260506_04_add_settings_table.py  20260507_01_add_dictionary_tables.py  20260507_02_add_user_gender_enum.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: audit_logs.py  auth.py  base.py  dictionaries.py  items.py  jobs.py  permissions.py  roles.py  settings.py  users.py  wechat_pay.py
backend/app/constants/: __init__.py  enums.py
backend/app/core/: config.py  db.py  db_types.py  permission_tree.py  runtime_settings.py  security.py  timezone.py
backend/app/crud/: __init__.py  audit_logs.py  base.py  dictionary.py  items.py  permissions.py  roles.py  settings.py  users.py
backend/app/jobs/: __init__.py  registry.py  scheduler.py
backend/app/jobs/definitions/: __init__.py  (+3 more)
backend/app/middleware/: audit_log.py
backend/app/models/: __init__.py  audit_log.py  auth.py  base.py  dictionary.py  item.py  rbac.py  setting.py  user.py
backend/app/schemas/: __init__.py  audit_log.py  datetime_types.py  dictionary.py  item.py  job.py  rbac.py  setting.py  user.py
backend/app/services/: __init__.py
backend/scripts/: export_enums.py
(+56 files in other folders)
